# semfind

./: .gitignore  LICENSE  README.md  pyproject.toml  semfind.skill
src/semfind/: cli.py  index.py  search.py
